# kitt_kodelig

./: CMakeLists.txt  README.md  config.h  main.cpp  mission_1.cpp  navigation.h  vision.h  vision_module.cpp  vision_module.h
Waypoint Calculator/: kodelig_wgs84_haritasi.txt  waypoint_calculator.py
esp32_g1/: esp32_g1.ino  vision_module.cpp
esp32_g2/: esp32_g2.ino  vision_module_g2.cpp  vision_module_g2.h
esp32_g3/: esp32_g3.ino  vision_g3.cpp  vision_g3.h
flight_module/: navigation.h
